# fabmanager

./: .gitignore  LICENSE  LICENSE.md  MANIFEST.in  README  README.md  README.rst  pyproject.toml  setup.py
fabmanager/: __init__.py  decorators.py  fabfile.py
fabmanager/samples/: fabfile.py
fabmanager/templates/fabmanager/: apache.conf  apache_django1.3.conf  apache_django1.6.conf  wsgi.py  wsgi_django1.6.py
