# PEP 621-compliant

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fabmanager"
version = "1.6"
description = "Extra commands on top of Fabric to help managing Django projects in production environments"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Rubens Altimari", email = "rubens@altimari.nl" },
]
requires-python = ">=3.6"
dependencies = ["fab-classic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/dalembertian/fabmanager"
